# lex2

./: .gitignore  CMakeLists.txt  Readme.md  conanfile.py
include/: DFA.h  Lex.h  LexInterface.h
src/: ConfigParser.cpp  ConfigParser.h  Lex.cpp  LexInterface.cpp  Pattern.cpp  Pattern.h  RuleManager.cpp  State.cpp  State.h  parser.y  scanner.l
test/: CMakeLists.txt  apptest.cpp  new.cfg  test.cfg
win32/bison/: BISONConfig.cmake
win32/flex/: FLEXConfig.cmake
